fixing content alignment

--- a/containerized/style.css
+++ b/containerized/style.css
@@ -70,7 +70,7 @@ header {
 
 /* Main content area styling */
 #content {
-    margin-left: 5%; /* Slightly closer to the sidebar */
+    margin-left: 0%; /* Slightly closer to the sidebar */
     width: 55%; /* Slightly increased content width */
     padding: 15px; /* Reduced padding inside the content */
     background: white;
